# Ray-Tracer

./: CMakeLists.txt  image.ppm  main.cpp
math/: vec3.cc  vec3.h
src/: main.cc
src/math/: interval.cc  interval.h  ray.cc  ray.h  util.h  vec3.cc  vec3.h
src/objects/: hittable-list.cc  hittable-list.h  hittable.cc  hittable.h  sphere.cc  sphere.h
src/rendering/: camera.cc  camera.h
src/util/: color.h
